# kakaotech_bootcamp

./: camphelper_chatbot.py  pyproject.toml
rag_w_ollama/: README.md  ollama codegemma.ipynb
rag_w_openai/: app.py  rag_function.py
src/: RAG_w_ollama.py
