[tool.poetry]
name = "ollama"
version = "0.1.0"
description = ""
authors = ["sminy85 <smini857@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
ipykernel = "^6.29.5"
langchain-community = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
